--- a/Client/package.json
+++ b/Client/package.json
@@ -18,9 +18,14 @@
     "passport": "^0.4.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-keyview": "^1.0.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-keyboard-aware-scrollview": "^2.1.0",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^2.16.1",
+    "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
