--- a/Client/package.json
+++ b/Client/package.json
@@ -14,7 +14,9 @@
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "expo": "~40.0.0",
+    "expo-linear-gradient": "~8.4.0",
     "expo-status-bar": "~1.0.3",
+    "getstream": "^7.1.0",
     "passport": "^0.4.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
