--- a/Server/package.json
+++ b/Server/package.json
@@ -13,16 +13,17 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "concurrently": "^5.0.2",
     "config": "^3.3.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-http-proxy": "^1.6.2",
     "express-validator": "^6.3.1",
-    "mongoose": "^5.8.9",
-    "socket.io": "^2.3.0"
+    "mongoose": "^5.12.8",
+    "socket.io": "^2.4.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
